# labcegor

./: CMakeLists.txt  README.md  package.xml
labcegor-bringup/: CMakeLists.txt  package.xml
labcegor-bringup/clips/: PsydoCodeNotes  turtle_rider.clp
labcegor-bringup/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
labcegor-bringup/launch/: cx_launch.py
labcegor-bringup/log/: latest_build
labcegor-bringup/params/: config.yaml
labcegor_bringup/: CMakeLists.txt  CMakeLists.txt.old  package.xml  package.xml.old
labcegor_bringup/clips/: irgendwas (Copy 2).clp  irgendwas (Copy 3).clp  irgendwas (Copy).clp  irgendwas.clp  main.clp
labcegor_bringup/clips/rcll/: aa-robo-control-orders.clp  aa-robo-control-t4.clp  deftemplates.clp  (+5 more)
labcegor_bringup/launch/: cx_launch.py  labcegor.launch.py
labcegor_bringup/params/: clips_env_manager.yaml  game.yaml  rcll.yaml  task3.yaml  task4.yaml
launch/: agent.launch.py  cx_launch_simple_agent.py  refbox.py
params/: clips_executive.yaml  cx_params.yaml  dummy_skiller.yaml
src/labcegor-agent/: action-selection.clp  complex_moving_domain.clp  complex_moving_domain.pddl  domain.clp  domain2.clp  fixed-sequence.clp  fixed-sequence_on_new_domain.clp  goal-creation.clp  goal-reasoner.clp  order-expansion.clp  print-action.clp  refbox-comm-init.clp  refbox-recv-messages.clp  refbox-send-messages.clp  simple_moving_domain.clp  simple_moving_domain.pddl  subgoal-creation_c0.clp  subgoal-creation_c1.clp  subgoal-creation_c2.clp  subgoal-creation_c3.clp  subgoal-creation_misc.clp  subgoal-creation_payment.clp
(+23 files in other folders)
